--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,4 +71,39 @@ body {
   }
 }
 
+@keyframes popup-open {
+  from {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+.animate-popup-open {
+  animation: popup-open 0.3s ease-out forwards;
+}
+
+@keyframes gradient-rotate {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.animate-gradient-rotate {
+  animation: gradient-rotate 3s infinite linear;
+  background-size: 200% 200%;
+}
+
 
