--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=MuseoModerno:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -139,6 +140,26 @@ html {
 
   100% {
     transform: scaleX(1);
+  }
+}
+
+
+
+
+@media screen and (max-width: 400px) {
+  .hero-robot{
+    height: 45vh;
+    width: 65vw;
+  }
+  .hero-body{
+    height: 55vh;
+  }
+  .hero-txt1{
+    font-size: 12px;
+
+  }
+  .hero-txt2{
+    font-size: 20px;
   }
 }
 
